# deposito_parodo

./: README.md
24-Settembre/guide_creator_flow/: pyproject.toml
24-Settembre/guide_creator_flow/AI_act/: application documentation.md  data documentation.md  model documentation.md
24-Settembre/guide_creator_flow/docs/source/: conf.py  index.rst
24-Settembre/guide_creator_flow/faiss_index_example/: index.faiss  index.pkl
24-Settembre/guide_creator_flow/output/: report.md
24-Settembre/guide_creator_flow/src/guide_creator_flow/: main.py
24-Settembre/guide_creator_flow/src/guide_creator_flow/crews/output_crew/: output_crew.py
24-Settembre/guide_creator_flow/src/guide_creator_flow/crews/poem_crew/: poem_crew.py
24-Settembre/guide_creator_flow/src/guide_creator_flow/crews/rag_crew/: rag_crew.py
24-Settembre/guide_creator_flow/src/guide_creator_flow/tools/: custom_tool.py
24-Settembre/guide_creator_flow/utilis/: db_vet.py  document.py  models.py  ragas_prova.py  vectore_store.py
26-Settembre/guide_creator_flow/: pyproject.toml
26-Settembre/guide_creator_flow/output/: report.md
26-Settembre/guide_creator_flow/src/guide_creator_flow/: main.py
26-Settembre/guide_creator_flow/src/guide_creator_flow/crews/output_crew/: output_crew.py
26-Settembre/guide_creator_flow/src/guide_creator_flow/crews/poem_crew/: poem_crew.py
26-Settembre/guide_creator_flow/src/guide_creator_flow/tools/: custom_tool.py
26-Settembre/guide_creator_flow/utilis/: models.py  rag_qdrant_hybrid.py  vectore_store.py
Esercizio 2/: esercizio_2.ipynb
Esercizio_2/: esercizio_2.py
(+71 files in other folders)
