[project]
name = "guide_creator_flow"
version = "0.1.0"
description = "guide_creator_flow using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.193.2,<1.0.0",
    "langchain>=0.3.27",
    "langchain-community>=0.3.30",
    "langchain-openai>=0.3.33",
    "openai>=1.109.1",
    "pypdf2>=3.0.1",
    "qdrant-client>=1.15.1",
]

[project.scripts]
kickoff = "guide_creator_flow.main:kickoff"
run_crew = "guide_creator_flow.main:kickoff"
plot = "guide_creator_flow.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
